---------------------------------------------------------------------------------------------------
Version: 2.1.18
Date: ????????
  Features:
    - Russian localisation file updated; kindly provided by https://github.com/Astorin  
---------------------------------------------------------------------------------------------------
Version: 2.1.17
Date: 2025-12-06
  Features:
    - Added advanced settings for how beacons are planned. These are not offered in the planner-UI, but can be found in the mod settings.
---------------------------------------------------------------------------------------------------
Version: 2.1.16
Date: 2025-12-01
  Features:
    - Added option to plan heatpipes on surfaces that require it.
  Fixes:
    - More proper check to test if a tile can cover ice. The new method should play more nicely with other mods.
---------------------------------------------------------------------------------------------------
Version: 2.1.15
Date: 2025-09-28
  Features:
    - Added Polish locale (provided by: https://github.com/GPDiwka) 
---------------------------------------------------------------------------------------------------
Version: 2.1.14
Date: 2025-09-27
  Fixes:
    - Fix false-positive in the routine that prunes dead-end pipes, causing a pipe to be removed in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2025-07-20
  Changes:
    - The picker for beacons will default to manual-placement when no prior selection was made. Making it more opt-in like, rather than opt-out.
  Fixes:
    - Fix the module-selection not showing, even though modules are available, the first time the UI is opened in a map.  
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2025-07-20
  Fixes:
    - Fix error when refreshing quality-picker for modules, when playing without quality.